Fix T80782 GPU: Curve editing widget point size broken after recent commit

This was caused by a faulty default where program point size was used.